incremented som module versions

--- a/package.json
+++ b/package.json
@@ -276,12 +276,12 @@
     "os": "^0.1.1",
     "path": "^0.12.7",
     "prop-types": "15.6.1",
-    "react": "16.3.0",
+    "react": "16.4.1",
     "react-autosuggest": "^9.3.4",
     "react-bootstrap": "^0.32.1",
     "react-burger-menu": "^2.4.4",
     "react-dfp": "^0.7.2",
-    "react-dom": "16.3.0",
+    "react-dom": "16.4.1",
     "react-facebook": "^5.0.3",
     "react-fontawesome": "^1.6.1",
     "react-helmet": "5.2.0",
@@ -293,7 +293,7 @@
     "react-redux": "5.0.7",
     "react-router-bootstrap": "^0.24.4",
     "react-router-config": "^1.0.0-beta.4",
-    "react-router-dom": "4.2.2",
+    "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.9",
     "react-scroll-to-component-ssr": "^1.0.0",
     "react-share": "^2.2.0",
@@ -301,9 +301,9 @@
     "react-youtube": "^7.6.0",
     "redux": "3.7.2",
     "redux-burger-menu": "^0.2.7",
-    "redux-form": "^7.3.0",
+    "redux-form": "^7.4.2",
     "redux-immutable": "4.0.0",
-    "redux-saga": "0.16.0",
+    "redux-saga": "1.0.0-beta.0",
     "redux-thunk": "^2.2.0",
     "reselect": "3.0.1",
     "sanitize.css": "4.1.0",
